app/s3-lister/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-lister
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-lister
  template:
    metadata:
      labels:
        app: s3-lister
    spec:
      serviceAccountName: s3-reader-sa   # Pod Identity isko dekh ke AWS creds inject karega

      # Init container — AWS CLI se S3 list karo, HTML banao
      # Pod Identity Agent automatically creds provide karega
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

      volumes:
        - name: html
          emptyDir: {}
